--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,12 +3,21 @@
     // Hover to view descriptions of existing attributes.
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
-    "configurations": [
+    "configurations": [ 
         {
-            "name": "Attach to Chrome",
-            "port": 9222,
+            "command": "npm start",
+            "name": "Run npm start",
+            "request": "launch",
+            "type": "node-terminal",
+            "webRoot": "${workspaceFolder}/api",
+            "cwd": "${workspaceFolder}/api"
+        },
+        {
+            "name": "Attach Chrome",
+            "type": "chrome",
             "request": "attach",
-            "type": "pwa-chrome",
+            "port": 9222,
+            "url": "http://localhost:3000/",
             "webRoot": "${workspaceFolder}"
         }
     ]
