--- a/ReactClient/tsconfig.json
+++ b/ReactClient/tsconfig.json
@@ -1,5 +1,11 @@
 {
   "compilerOptions": {
+    "baseUrl": ".",
+
+    "paths": {
+      "@/shared/*": ["./../shared/*"]
+    },
+
     /* Visit https://aka.ms/tsconfig.json to read more about this file */
     "jsx": "react",
     "incremental": true,                              /* Enable incremental compilation */
