--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,8 +5,19 @@
     "version": "0.2.0",
     "configurations": [ 
         {
+            // While in API folder: i.e. ...\ShoppingList\api>
+            // Need to first run: npm run debug
+            "name": "Attach to Api (Node/Express server)",
+            "port": 9229,
+            "request": "attach",
+            "skipFiles": [
+                "<node_internals>/**"
+            ],
+            "type": "pwa-node"
+        },
+        {
+            "name": "Launch Api (Node/Express server)",
             "command": "npm start",
-            "name": "Run npm start",
             "request": "launch",
             "type": "node-terminal",
             "webRoot": "${workspaceFolder}/api",
