--- a/ReactClient/tsconfig.json
+++ b/ReactClient/tsconfig.json
@@ -10,7 +10,7 @@
     "jsx": "react",
     "incremental": true,                              /* Enable incremental compilation */
     "target": "es5",                                  /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
-    "module": "es6",                                  /* Specify what module code is generated. */
+    "module": "ES2020",                                  /* Specify what module code is generated. */
     "moduleResolution": "node",                       /* Specify how TypeScript looks up a file from a given module specifier. */
     "outDir": "./dist/",                              /* Specify an output folder for all emitted files. */
     "esModuleInterop": true,                          /* Disable resolving symlinks to their realpath. This correlates to the same flag in node. */
