--- a/ReactClient/package.json
+++ b/ReactClient/package.json
@@ -46,7 +46,18 @@
     ]
   },
   "devDependencies": {
+    "@types/enzyme": "^3.10.11",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.6",
+    "enzyme": "^3.11.0",
     "jest": "^27.5.1",
+    "ts-jest": "^27.1.3",
     "typescript": "^4.5.5"
+  },
+  "jest": {
+    "transformIgnorePatterns": [
+      "node_modules/.*",
+      ".*\\.js"
+    ],
+    "maxWorkers": 4
   }
 }
