--- a/ReactClient/tsconfig.json
+++ b/ReactClient/tsconfig.json
@@ -15,7 +15,7 @@
     "outDir": "./dist/",                              /* Specify an output folder for all emitted files. */
     "esModuleInterop": true,                          /* Disable resolving symlinks to their realpath. This correlates to the same flag in node. */
     "forceConsistentCasingInFileNames": true,         /* Ensure that casing is correct in imports. */
-    //"strict": true,                                   /* Enable all strict type-checking options. */
+    "strict": true,                                   /* Enable all strict type-checking options. */
     "noImplicitAny": true,                            /* Enable error reporting for expressions and declarations with an implied `any` type.. */
     //"strictNullChecks": true,                         /* When type checking, take into account `null` and `undefined`. */
     //"strictFunctionTypes": true,                      /* When assigning functions, check to ensure parameters and the return values are subtype-compatible. */
