Added a few tests to teh basketSlice (redux) code

--- a/ReactClient/package.json
+++ b/ReactClient/package.json
@@ -55,9 +55,7 @@
   },
   "jest": {
     "transformIgnorePatterns": [
-      "node_modules/.*",
-      ".*\\.js"
-    ],
-    "maxWorkers": 4
+      "node_modules/.*"
+    ]
   }
 }
